--- a/todo/templates/delete.html
+++ b/todo/templates/delete.html
@@ -4,7 +4,7 @@
     <form method="POST" action="">
         {% csrf_token %}
         <div>
-            Are you sure you want to delete the item ({{ obj }})
+            Are you sure you want to delete the item ({{ obj.todo }})
         </div>
         <a href="{{ request.META.HTTP_REFERER }}">Go back</a>
         <input type="submit" value="Confirm">
